// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataListItem > renders correctly 1`] = `
"<li data-v-e715a895="" class="vd-data-list-item d-flex flex-wrap"><i class="mdi-home mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
  <div data-v-e715a895="" class="vd-data-list-item-content">
    <div data-v-e715a895="" class="vd-row">
      <div data-v-e715a895="" class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, .6);">Test</div>
      <div data-v-e715a895="" class="vd-data-list-item-value"><span>Custom Value</span></div>
    </div><button type="button" class="v-btn v-btn--elevated v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-elevated"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Custom Action</span>
      <!---->
      <!---->
    </button>
  </div>
</li>"
`;

exports[`DataListItem > renders correctly a value as plain HTML 1`] = `
"<li data-v-e715a895="" class="vd-data-list-item d-flex flex-wrap">
  <!--v-if-->
  <div data-v-e715a895="" class="vd-data-list-item-content">
    <div data-v-e715a895="" class="">
      <div data-v-e715a895="" class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, .6);">Test</div>
      <div data-v-e715a895="" class="vd-data-list-item-value"><span data-v-e715a895="" class="text-body-1">Paul<br> Dupont</span></div>
    </div>
    <!--v-if-->
  </div>
</li>"
`;

exports[`DataListItem > renders correctly a value with HTML as text 1`] = `
"<li data-v-e715a895="" class="vd-data-list-item d-flex flex-wrap">
  <!--v-if-->
  <div data-v-e715a895="" class="vd-data-list-item-content">
    <div data-v-e715a895="" class="">
      <div data-v-e715a895="" class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, .6);">Test</div>
      <div data-v-e715a895="" class="vd-data-list-item-value"><span data-v-e715a895="" class="text-body-1">&lt;span&gt;Custom Value&lt;/span&gt;</span></div>
    </div>
    <!--v-if-->
  </div>
</li>"
`;

exports[`DataListItem > renders correctly in row mode 1`] = `
"<li data-v-e715a895="" class="vd-data-list-item d-flex flex-wrap">
  <!--v-if-->
  <div data-v-e715a895="" class="vd-data-list-item-content">
    <div data-v-e715a895="" class="vd-row">
      <div data-v-e715a895="" class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, .6);">Test</div>
      <div data-v-e715a895="" class="vd-data-list-item-value"><span data-v-e715a895="" class="text-body-1">Sample Value</span></div>
    </div><button data-v-e715a895="" type="button" class="v-btn v-theme--light text-accent v-btn--density-default v-btn--size-small v-btn--variant-text text-body-1 pa-0 vd-data-list-item-action-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Click Me</span>
      <!---->
      <!---->
    </button>
  </div>
</li>"
`;

exports[`DataListItem > renders correctly value in a chip 1`] = `
"<li data-v-e715a895="" class="vd-data-list-item d-flex flex-wrap">
  <!--v-if-->
  <div data-v-e715a895="" class="vd-data-list-item-content">
    <div data-v-e715a895="" class="">
      <div data-v-e715a895="" class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, .6);">Test</div>
      <div data-v-e715a895="" class="vd-data-list-item-value"><span data-v-e715a895="" class="v-chip v-theme--light v-chip--density-default v-chip--size-default v-chip--variant-tonal mt-1" draggable="false"><!----><span class="v-chip__underlay"></span>
        <!---->
        <!---->
        <div class="v-chip__content" data-no-activator="">Chip Value</div>
        <!---->
        <!----></span>
      </div>
    </div>
    <!--v-if-->
  </div>
</li>"
`;

exports[`DataListItem > renders correctly with a NaN value 1`] = `
"<li data-v-e715a895="" class="vd-data-list-item d-flex flex-wrap">
  <!--v-if-->
  <div data-v-e715a895="" class="vd-data-list-item-content">
    <div data-v-e715a895="" class="">
      <div data-v-e715a895="" class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, .6);">Test</div>
      <div data-v-e715a895="" class="vd-data-list-item-value"><span data-v-e715a895="" class="text-body-1">…</span></div>
    </div>
    <!--v-if-->
  </div>
</li>"
`;

exports[`DataListItem > renders correctly with a number value 1`] = `
"<li data-v-e715a895="" class="vd-data-list-item d-flex flex-wrap">
  <!--v-if-->
  <div data-v-e715a895="" class="vd-data-list-item-content">
    <div data-v-e715a895="" class="">
      <div data-v-e715a895="" class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, .6);">Test</div>
      <div data-v-e715a895="" class="vd-data-list-item-value"><span data-v-e715a895="" class="text-body-1">123</span></div>
    </div>
    <!--v-if-->
  </div>
</li>"
`;

exports[`DataListItem > renders correctly with an action 1`] = `
"<li data-v-e715a895="" class="vd-data-list-item d-flex flex-wrap">
  <!--v-if-->
  <div data-v-e715a895="" class="vd-data-list-item-content">
    <div data-v-e715a895="" class="">
      <div data-v-e715a895="" class="vd-data-list-item-label text-caption" style="color: rgba(0, 0, 0, .6);">Test</div>
      <div data-v-e715a895="" class="vd-data-list-item-value"><span data-v-e715a895="" class="text-body-1">…</span></div>
    </div><button data-v-e715a895="" type="button" class="v-btn v-theme--light text-accent v-btn--density-default v-btn--size-small v-btn--variant-text text-body-1 pa-0 vd-data-list-item-action-btn"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
      <!----><span class="v-btn__content" data-no-activator="">Click Me</span>
      <!---->
      <!---->
    </button>
  </div>
</li>"
`;
